--- a/org/Labbook.org
+++ b/org/Labbook.org
@@ -2769,10 +2769,8 @@ EOF
            library(plyr)
            
            df = read.csv('../experiments/2016_11_14/titan/15_18_23/Data.csv',strip.white=T,header=T)
-
            boast <- data.frame( nest = df[df$kernel == "boast",]$nest, acc = df[df$kernel == "ref",]$time / df[df$kernel == "boast",]$time )
            df2 <- ddply(boast, c("nest"), summarise, speedup = mean(acc), err = 2*sd(acc)/sqrt(length(acc)))
-
            summary(df2)
          #+end_src
 
@@ -2785,13 +2783,12 @@ EOF
          :  3rd Qu.:6.250   3rd Qu.:2.317   3rd Qu.:0.031896  
          :  Max.   :9.000   Max.   :2.817   Max.   :0.074835
 
-         #+begin_src R :results output graphics :file ./experiments/xp1/plots/speedup.png :exports both :width 800 :height 600 :session
+         #+begin_src R :results output graphics :file ./experiments/xp1/plots/speedup.png :exports both :width 600 :height 400 :session
            ggplot(df2, aes(x = factor(nest), y = speedup)) + 
-               geom_bar(fill="grey38",stat = "identity", position="dodge") +
+               geom_bar(fill="dodgerblue3",stat = "identity", position="dodge") +
                geom_errorbar(aes(ymax = speedup + err, ymin = speedup - err), position = position_dodge(0.9), width = 0.5) +
                labs(title = "Speedup compared to the reference implementation on different loop nests", y="Speedup", x="Loop Nest") +
-               theme(axis.text=element_text(size=14,color="black"), axis.title=element_text(size=16,face="bold"), plot.title = element_text(size=16,face="bold")) +
-               theme_bw()
+               theme(axis.text=element_text(size=14,color="black"), axis.title=element_text(size=14,face="bold"), plot.title = element_text(size=14,face="bold"))
          #+end_src
 
          #+RESULTS:
