--- a/org/Labbook.org
+++ b/org/Labbook.org
@@ -4122,18 +4122,25 @@ END SUBROUTINE orig1
       require 'narray'
 
       # set_array_start(0)
-      a = Int("a",:dir => :out, :dim => [Dim(10)]) 
+      def gen(step)
+        a = Int("a",:dir => :out, :dim => [Dim(10)]) 
 
-      p1 = Procedure::new("p1",[a]){
-        i = Int("i")
-        for1 = For(i,1,10){
-          pr a[i] === a[i] + i
+        p1 = Procedure::new("p1",[a]){
+          decl i = Int("i")
+          decl j = Int("j")
+          pr For(i,1,10,:step => step){
+            pr For(j,0,step-1){
+              pr a[i+j] === a[i+j] + i+j
+            }.unroll
+          }
         }
-        pr for1.unroll
-      }
-      set_lang(C)
-      k = p1.ckernel
+        set_lang(C)
+        k = p1.ckernel
+        return k
+      end
 
+      k = gen(5)
+      k.build
       a = NArray.int(10).random!(20)
       k.run(a)
       k
@@ -4142,16 +4149,15 @@ END SUBROUTINE orig1
     #+RESULTS:
     #+begin_example
     void p1(int32_t * a){
-      a[1 - (1)] = a[1 - (1)] + 1;
-      a[2 - (1)] = a[2 - (1)] + 2;
-      a[3 - (1)] = a[3 - (1)] + 3;
-      a[4 - (1)] = a[4 - (1)] + 4;
-      a[5 - (1)] = a[5 - (1)] + 5;
-      a[6 - (1)] = a[6 - (1)] + 6;
-      a[7 - (1)] = a[7 - (1)] + 7;
-      a[8 - (1)] = a[8 - (1)] + 8;
-      a[9 - (1)] = a[9 - (1)] + 9;
-      a[10 - (1)] = a[10 - (1)] + 10;
+      int32_t i;
+      int32_t j;
+      for (i = 1; i <= 10; i += 5) {
+        a[i + 0 - (1)] = a[i + 0 - (1)] + i + 0;
+        a[i + 1 - (1)] = a[i + 1 - (1)] + i + 1;
+        a[i + 2 - (1)] = a[i + 2 - (1)] + i + 2;
+        a[i + 3 - (1)] = a[i + 3 - (1)] + i + 3;
+        a[i + 4 - (1)] = a[i + 4 - (1)] + i + 4;
+      }
     }
 #+end_example
 
